--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <header>
+        <div>
+            <h1>Hello, World!</h1>
+        </div>
+    </header>
     <h2>My first web page</h2>
 </body>
 </html>
