--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
         </div>
     </header>
     <h2>My first web page</h2>
+    <footer>
+        <div>
+            <p>Copyright 2024</p>
+        </div>
+    </footer>
 </body>
 </html>
