--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         </div>
     </header>
     <h2>My first web page</h2>
+    <p>My first paragraph.</p>
     <footer>
         <div>
             <p>Copyright 2024</p>
