Add image nice cat

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     </header>
     <h2>My first web page</h2>
     <p>My first paragraph.</p>
+    <img 
+        src="cat.jpg" 
+        alt="cat" 
+        width="110" 
+        height="85"
+    />
     <footer>
         <div>
             <p>Copyright 2024</p>
