Add second paragraph p

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         width="110" 
         height="85"
     />
+    <p>My second paragraph.</p>
     <footer>
         <div>
             <p>Copyright 2024</p>
